# xtensor-interpolate

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  xtensor-interpolateConfig.cmake.in
doc/: Doxyfile  Makefile  environment.yml
doc/src/: api_reference.rst  conf.py  index.rst  installation.rst
include/xfitpack/: CMakeLists.txt  xfcdec.h
include/xtensor-fitpack/: xfcdec.h  xfitpack.hpp  xfitpack_utils.hpp
include/xtensor-interpolate/: xinterpolate.hpp  xspline.hpp
test/: CMakeLists.txt  GTest.cmake.in  copyGTest.cmake.in  main.cpp  smoke_test_xfitpack.cpp  test_functional.cpp  test_univariate_spline.cpp  test_xinterpolate.cpp
